# Cryptids

./: .gitignore  README.md  pyproject.toml
cage/: db.sqlite3  manage.py  urls.py
cage/cage/: asgi.py  settings.py  urls.py  wsgi.py
cage/cryptids/: admin.py  apps.py  models.py  urls.py  views.py
cage/cryptids/migrations/: 0001_initial.py  0002_animal_image.py  0003_animal_description.py  0004_auto_20210325_1432.py  0005_animal_likes.py  0006_sighting.py
cage/cryptids/static/cryptids/: about.css  animals.css  form.css  index.css  locations.css  login.css
cage/cryptids/templates/: base.html  detail.html  index.html
cage/cryptids/templates/cryptids/: About.html  Form.html  Home.html  animal.html  detail.html  index.html  location.html  locations.html  login.html  questionnaire.html  registation.html  register.html
cage/media/upload/: leprechau.jfif  phoenix_c6HA1Lp.jfif
