[tool.poetry]
name = "cryptids"
version = "0.1.0"
description = ""
authors = ["Carys <77974075+carys23@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
